PA2/decaf/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SealedClause CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  SealedClause : SEALED

  15  ExtendsClause : EXTENDS IDENTIFIER
  16                |

  17  FieldList : FieldList VariableDef
  18            | FieldList FunctionDef
  19            |

  20  Formals : VariableList
  21          |

  22  VariableList : VariableList ',' Variable
  23               | Variable

  24  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  25              | Type IDENTIFIER '(' Formals ')' StmtBlock

  26  StmtBlock : '{' StmtList '}'

  27  StmtList : StmtList Stmt
  28           |

  29  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  30  Stmt : ForeachStmt
  31       | OCStmt
  32       | VariableDef
  33       | SimpleStmt ';'
  34       | IfStmt
  35       | WhileStmt
  36       | ForStmt
  37       | ReturnStmt ';'
  38       | PrintStmt ';'
  39       | BreakStmt ';'
  40       | StmtBlock
  41       | GuardedStmt

  42  SimpleStmt : LValue '=' Expr
  43             | Call
  44             |

  45  Receiver : Expr '.'
  46           |

  47  LValue : Receiver IDENTIFIER
  48         | Expr '[' Expr ']'
  49         | VAR IDENTIFIER

  50  Call : Receiver IDENTIFIER '(' Actuals ')'

  51  Expr : LValue
  52       | Call
  53       | Constant
  54       | '[' Expr FOR IDENTIFIER IN Expr ']'
  55       | '[' Expr FOR IDENTIFIER IN Expr IF Expr ']'
  56       | Expr '[' Expr ']' DEFAULT Expr
  57       | Expr '[' Expr ':' Expr ']'
  58       | Expr ARRAY_CONCAT Expr
  59       | Expr '+' Expr
  60       | Expr '-' Expr
  61       | Expr '*' Expr
  62       | Expr '/' Expr
  63       | Expr '%' Expr
  64       | Expr ARRAY_REPEAT Expr
  65       | Expr EQUAL Expr
  66       | Expr NOT_EQUAL Expr
  67       | Expr '<' Expr
  68       | Expr '>' Expr
  69       | Expr LESS_EQUAL Expr
  70       | Expr GREATER_EQUAL Expr
  71       | Expr AND Expr
  72       | Expr OR Expr
  73       | '(' Expr ')'
  74       | '-' Expr
  75       | '!' Expr
  76       | READ_INTEGER '(' ')'
  77       | READ_LINE '(' ')'
  78       | THIS
  79       | NEW IDENTIFIER '(' ')'
  80       | NEW Type '[' Expr ']'
  81       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  82       | '(' CLASS IDENTIFIER ')' Expr

  83  Constant : LITERAL
  84           | ArrayConstant
  85           | NULL

  86  ConstantList : ConstantList ',' Constant
  87               | Constant

  88  ArrayConstant : '[' ConstantList ']'
  89                | '[' ']'

  90  GuardedStmt : IF '{' IfBranch IfSubStmt '}'
  91              | IF '{' '}'

  92  IfBranch : IfBranch IfSubStmt GUARD
  93           |

  94  IfSubStmt : Expr ':' Stmt

  95  ForeachStmt : FOREACH '(' BoundVariable IN Expr ')' Stmt
  96              | FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt

  97  BoundVariable : VARTYPE IDENTIFIER
  98                | Type IDENTIFIER

  99  VARTYPE : VAR

 100  Actuals : ExprList
 101          |

 102  ExprList : ExprList ',' Expr
 103           | Expr

 104  WhileStmt : WHILE '(' Expr ')' Stmt

 105  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 106  BreakStmt : BREAK

 107  IfStmt : IF '(' Expr ')' Stmt ElseClause

 108  ElseClause : ELSE Stmt
 109             |

 110  ReturnStmt : RETURN Expr
 111             | RETURN

 112  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5
	SealedClause  goto 6


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 7
	.  error


state 2
	SealedClause : SEALED .  (14)

	.  reduce 14


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8
	SealedClause  goto 6


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : SealedClause . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 9
	.  error


state 7
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (16)

	EXTENDS  shift 10
	'{'  reduce 16

	ExtendsClause  goto 11


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ClassDef : SealedClause CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 12
	.  error


state 10
	ExtendsClause : EXTENDS . IDENTIFIER  (15)

	IDENTIFIER  shift 13
	.  error


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 14
	.  error


state 12
	ClassDef : SealedClause CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (16)

	EXTENDS  shift 10
	'{'  reduce 16

	ExtendsClause  goto 15


state 13
	ExtendsClause : EXTENDS IDENTIFIER .  (15)

	.  reduce 15


state 14
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 16


state 15
	ClassDef : SealedClause CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 17
	.  error


state 16
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	STATIC  shift 23
	'}'  shift 24
	.  error

	VariableDef  goto 25
	Variable  goto 26
	Type  goto 27
	FunctionDef  goto 28


state 17
	ClassDef : SealedClause CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 29


state 18
	Type : VOID .  (7)

	.  reduce 7


state 19
	Type : BOOL .  (8)

	.  reduce 8


state 20
	Type : INT .  (6)

	.  reduce 6


state 21
	Type : STRING .  (9)

	.  reduce 9


state 22
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 30
	.  error


state 23
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (24)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	.  error

	Type  goto 31


state 24
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 25
	FieldList : FieldList VariableDef .  (17)

	.  reduce 17


state 26
	VariableDef : Variable . ';'  (4)

	';'  shift 32
	.  error


state 27
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (25)

	IDENTIFIER  shift 33
	'['  shift 34
	.  error


state 28
	FieldList : FieldList FunctionDef .  (18)

	.  reduce 18


state 29
	ClassDef : SealedClause CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	STATIC  shift 23
	'}'  shift 35
	.  error

	VariableDef  goto 25
	Variable  goto 26
	Type  goto 27
	FunctionDef  goto 28


state 30
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 31
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 36
	'['  shift 34
	.  error


state 32
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 33
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (25)

	'('  shift 37
	';'  reduce 5


state 34
	Type : Type '[' . ']'  (11)

	']'  shift 38
	.  error


state 35
	ClassDef : SealedClause CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 36
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 39
	.  error


state 37
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (25)
	Formals : .  (21)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	')'  reduce 21

	Variable  goto 40
	Type  goto 41
	Formals  goto 42
	VariableList  goto 43


state 38
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 39
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (21)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	')'  reduce 21

	Variable  goto 40
	Type  goto 41
	Formals  goto 44
	VariableList  goto 43


state 40
	VariableList : Variable .  (23)

	.  reduce 23


state 41
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 45
	'['  shift 34
	.  error


state 42
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (25)

	')'  shift 46
	.  error


state 43
	Formals : VariableList .  (20)
	VariableList : VariableList . ',' Variable  (22)

	','  shift 47
	')'  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 48
	.  error


state 45
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 46
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (25)

	'{'  shift 49
	.  error

	StmtBlock  goto 50


state 47
	VariableList : VariableList ',' . Variable  (22)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	.  error

	Variable  goto 51
	Type  goto 41


state 48
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 49
	.  error

	StmtBlock  goto 52


state 49
	StmtBlock : '{' . StmtList '}'  (26)
	StmtList : .  (28)

	.  reduce 28

	StmtList  goto 53


state 50
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (25)

	.  reduce 25


state 51
	VariableList : VariableList ',' Variable .  (22)

	.  reduce 22


state 52
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 53
	StmtBlock : '{' StmtList . '}'  (26)
	StmtList : StmtList . Stmt  (27)
	SimpleStmt : .  (44)
	Receiver : .  (46)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	NULL  shift 54
	THIS  shift 55
	WHILE  shift 56
	FOR  shift 57
	IF  shift 58
	RETURN  shift 59
	BREAK  shift 60
	NEW  shift 61
	PRINT  shift 62
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	SCOPY  shift 67
	VAR  shift 68
	FOREACH  shift 69
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	'['  shift 73
	'{'  shift 49
	'}'  shift 74
	IDENTIFIER  reduce 46
	';'  reduce 44

	VariableDef  goto 75
	Variable  goto 26
	Type  goto 41
	StmtBlock  goto 76
	Stmt  goto 77
	OCStmt  goto 78
	Expr  goto 79
	ForeachStmt  goto 80
	SimpleStmt  goto 81
	IfStmt  goto 82
	WhileStmt  goto 83
	ForStmt  goto 84
	ReturnStmt  goto 85
	PrintStmt  goto 86
	BreakStmt  goto 87
	GuardedStmt  goto 88
	LValue  goto 89
	Call  goto 90
	Receiver  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 54
	Constant : NULL .  (85)

	.  reduce 85


state 55
	Expr : THIS .  (78)

	.  reduce 78


state 56
	WhileStmt : WHILE . '(' Expr ')' Stmt  (104)

	'('  shift 94
	.  error


state 57
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (105)

	'('  shift 95
	.  error


state 58
	GuardedStmt : IF . '{' IfBranch IfSubStmt '}'  (90)
	GuardedStmt : IF . '{' '}'  (91)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (107)

	'('  shift 96
	'{'  shift 97
	.  error


state 59
	ReturnStmt : RETURN . Expr  (110)
	ReturnStmt : RETURN .  (111)
	Receiver : .  (46)

	NULL  shift 54
	THIS  shift 55
	NEW  shift 61
	READ_INTEGER  shift 63
	READ_LINE  shift 64
	LITERAL  shift 65
	INSTANCEOF  shift 66
	VAR  shift 68
	'-'  shift 70
	'!'  shift 71
	'('  shift 72
	'['  shift 73
	IDENTIFIER  reduce 46
	';'  reduce 111

	Expr  goto 98
	LValue  goto 99
	Call  goto 100
	Receiver  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 60
	BreakStmt : BREAK .  (106)

	.  reduce 106


state 61
	Expr : NEW . IDENTIFIER '(' ')'  (79)
	Expr : NEW . Type '[' Expr ']'  (80)

	VOID  shift 18
	BOOL  shift 19
	INT  shift 20
	STRING  shift 21
	CLASS  shift 22
	IDENTIFIER  shift 101
	.  error

	Type  goto 102


state 62
	PrintStmt : PRINT . '(' ExprList ')'  (112)

	'('  shift 103
	.  error


state 63
	Expr : READ_INTEGER . '(' ')'  (76)

	'('  shift 104
	.  error


state 64
	Expr : READ_LINE . '(' ')'  (77)

	'('  shift 105
	.  error


state 65
	Constant : LITERAL .  (83)

	.  reduce 83


state 66
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (81)

	'('  shift 106
	.  error


state 67
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (29)

	'('  shift 107
	.  error


state 68
	LValue : VAR . IDENTIFIER  (49)

	IDENTIFIER  shift 108
	.  error


state 69
